--- a/exit.html
+++ b/exit.html
@@ -14,23 +14,35 @@
 </head>
 
 <body>
+    <div class="burbujas">
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+        <div class="burbuja"></div>
+    </div>
 
     <div class="container" id="general">
         <div id="Imgleft">
             <div id="superior">
-                <img  class="animate__animated animate__backInLeft" src="img/GMHpcNb4_400x400.jpg" id="img3">
+                <img class="animate__animated animate__backInLeft" src="img/GMHpcNb4_400x400.jpg" id="img3">
                 <h1 class="text-center animate__animated animate__zoomIn" id="titulo">Encuesta de Satisfacción</h1>
             </div>
         </div>
         <div id="izqui">
         </div>
         <br>
-            <div class="col-md-12">
-                <div class="parrafos">
-                    <p class="text-center animate__animated animate__rubberBand" >Aguas</p>
-                    <p class="text-center animate__animated animate__rubberBand" id="men" >Mendocinas</p>
-                  </div>
+        <div class="col-md-12">
+            <div class="parrafos">
+                <p class="text-center animate__animated animate__rubberBand">Aguas</p>
+                <p class="text-center animate__animated animate__rubberBand" id="men">Mendocinas</p>
             </div>
+        </div>
 
 
 
@@ -40,7 +52,7 @@
             <img src="img/encuesta.png" id="imaEncuesta">
         </div>
         <div>
-            
+
         </div>
         <div id="inferior">
             <img src="img/—Pngtree—water drop decoration painting cartoon_5455417.png"
